force-app/main/default/objects/Activity/fields/amc__Time_Log__c.field-meta.xml
<CustomField>
    <fullName>amc__Time_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Calendar Converter Page on Timesheet</description>
    <label>Time Log</label>
    <referenceTo>amc__Time_Log__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>