force-app/main/default/objects/Activity/fields/Event_status__c.field-meta.xml
<CustomField>
    <fullName>Event_status__c</fullName>
    <label>Event status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_status</valueSetName>
    </valueSet>
</CustomField>