force-app/main/default/objects/Activity/fields/Hours_remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_remaining__c</fullName>
    <description>User entered hours left for events not associated with mission control actions</description>
    <label>Hours remaining</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>