force-app/main/default/objects/Activity/fields/Hours_to_do__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_do__c</fullName>
    <formula>Total_hours_remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours to do</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>