force-app/main/default/objects/Activity/fields/Parent_of_related_to_id__c.field-meta.xml
<CustomField>
    <fullName>Parent_of_related_to_id__c</fullName>
    <description>Field to hold the id of the parent object of the related object - used for projects with actions</description>
    <label>Parent of related to id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>