force-app/main/default/objects/Activity/fields/Parent_of_related_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_of_related_to_Name__c</fullName>
    <description>Field to hold the name of the parent object of the related to object. e.g. Project name for action</description>
    <label>Parent of related to Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>