force-app/main/default/objects/Activity/fields/Total_hours_remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_hours_remaining__c</fullName>
    <description>copy total hours remaining from mission control action into this field for display on dashboards</description>
    <label>Total hours remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>